--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ REDIS_PASSWORD=root
 MYSQL_VERSION=latest
 MYSQL_PORT=3306
 MYSQL_DATABASE=default
-MYSQL_USER=default
+MYSQL_USER=admin
 MYSQL_PASSWORD=secret
 MYSQL_ROOT_PASSWORD=root
 
@@ -24,3 +24,23 @@ POSTGRES_DB=default
 POSTGRES_USER=root
 POSTGRES_PASSWORD=root
 POSTGRES_PORT=5432
+
+### MINIO #################################################
+MINIO_PORT=9000
+MINIO_CONSOLE_PORT=9001
+MINIO_ROOT_USER=root
+MINIO_ROOT_PASSWORD=root
+
+### REDISWEBUI #########################################
+REDIS_WEBUI_USERNAME=root
+REDIS_WEBUI_PASSWORD=root
+REDIS_WEBUI_CONNECT_HOST=redis
+REDIS_WEBUI_CONNECT_PORT=6379
+REDIS_WEBUI_PORT=9987
+
+
+### RABBITMQ ##############################################
+RABBITMQ_NODE_HOST_PORT=5672
+RABBITMQ_MANAGEMENT_HTTP_HOST_PORT=15672
+RABBITMQ_MANAGEMENT_HTTPS_HOST_PORT=15671
+RABBITMQ_WEB_STOMP_HOST_PORT=15674
