--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,23 @@ services:
       - "${REDIS_PORT}:6379"
     networks:
       - backend
+  redis-webui:
+    container_name: redis-webui
+    restart: always
+    build:
+      context: ./redis-webui
+    environment:
+      - ADMIN_USER=${REDIS_WEBUI_USERNAME}
+      - ADMIN_PASS=${REDIS_WEBUI_PASSWORD}
+      - REDIS_1_HOST=${REDIS_WEBUI_CONNECT_HOST}
+      - REDIS_1_PORT=${REDIS_WEBUI_CONNECT_PORT}
+      - REDIS_1_AUTH=${REDIS_PASSWORD}
+    networks:
+      - backend
+    ports:
+      - "${REDIS_WEBUI_PORT}:80"
+    depends_on:
+      - redis
   mysql:
     container_name: mysql
     build:
@@ -80,5 +97,38 @@ services:
       - ./jenkins/certs:/certs/client
       - ./jenkins/jenkins_home:/var/jenkins_home
       - ./jenkins/docker.sock:/var/run/docker.sock
+    networks:
+      - backend
+  minio:
+    container_name: minio
+    restart: always
+    build: ./minio
+    volumes:
+      - ./minio/data:/export
+      - ./minio/config:/root/.minio
+    ports:
+      - "${MINIO_PORT}:9000"
+      - "${MINIO_CONSOLE_PORT}:9001"
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+    networks:
+      - frontend
+      - backend
+  rabbitmq:
+    container_name: rabbitmq
+    restart: always
+    build: ./rabbitmq
+    ports:
+      - "${RABBITMQ_NODE_HOST_PORT}:5672"
+      - "${RABBITMQ_MANAGEMENT_HTTP_HOST_PORT}:15672"
+      - "${RABBITMQ_MANAGEMENT_HTTPS_HOST_PORT}:15671"
+      - "${RABBITMQ_WEB_STOMP_HOST_PORT}:15674"
+    privileged: true
+    hostname: compose-rabbitmq
+    volumes:
+      - ./rabbitmq/data:/var/lib/rabbitmq
+      - ./rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
+      - ./rabbitmq/management_agent.disable_metrics_collector.conf:/etc/rabbitmq/conf.d/management_agent.disable_metrics_collector.conf
     networks:
       - backend
