fix: kafka issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ volumes:
 services:
   redis:
     container_name: redis
+    restart: unless-stopped
     build: ./redis
     volumes:
       - ./redis/data:/data
@@ -39,6 +40,7 @@ services:
       - redis
   mysql:
     container_name: mysql
+    restart: unless-stopped
     build:
       context: ./mysql
       args:
@@ -58,6 +60,7 @@ services:
       - backend
   postgres:
     container_name: postgres
+    restart: unless-stopped
     build:
       context: ./postgres
       args:
@@ -75,6 +78,7 @@ services:
       - backend
   mongo:
     container_name: mongodb
+    restart: unless-stopped
     build: ./mongo
     ports:
       - "${MONGODB_PORT}:27017"
@@ -101,7 +105,7 @@ services:
       - backend
   minio:
     container_name: minio
-    restart: always
+    restart: unless-stopped
     build: ./minio
     volumes:
       - ./minio/data:/export
@@ -117,7 +121,7 @@ services:
       - backend
   rabbitmq:
     container_name: rabbitmq
-    restart: always
+    restart: unless-stopped
     build: ./rabbitmq
     ports:
       - "${RABBITMQ_NODE_HOST_PORT}:5672"
@@ -135,14 +139,25 @@ services:
   kafka:
     container_name: kafka
     image: 'bitnami/kafka:latest'
+    environment:
+      - KAFKA_ENABLE_KRAFT=yes
+      - KAFKA_CFG_NODE_ID=1
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
+      - KAFKA_CFG_LISTENERS=SASL_PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=SASL_PLAINTEXT://localhost:9092
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=SASL_PLAINTEXT:SASL_PLAINTEXT,CONTROLLER:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=SASL_PLAINTEXT
+      - KAFKA_CFG_SASL_ENABLED_MECHANISMS=PLAIN
+      - KAFKA_CFG_SASL_MECHANISM_INTER_BROKER_PROTOCOL=PLAIN
+      - KAFKA_CFG_SUPER_USERS=User:admin
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CLIENT_USERS=admin
+      - KAFKA_CLIENT_PASSWORDS=admin
+      - KAFKA_CFG_LISTENER_NAME_SASL_PLAINTEXT_SASL_JAAS_CONFIG=org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="admin";
+    ports:
+      - '9092:9092'
+      - '9093:9093'
     networks:
       - backend
-    environment:
-      - KAFKA_CFG_NODE_ID=0
-      - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_INTER_BROKER_USER=root
-      - KAFKA_INTER_BROKER_PASSWORD=root
