--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 WORKSPACE_TIMEZONE=UTC
+APP_CODE_PATH_HOST=./__app-code
 
 ### REDIS #################################################
 REDIS_PORT=6379
@@ -44,3 +45,9 @@ RABBITMQ_NODE_HOST_PORT=5672
 RABBITMQ_MANAGEMENT_HTTP_HOST_PORT=15672
 RABBITMQ_MANAGEMENT_HTTPS_HOST_PORT=15671
 RABBITMQ_WEB_STOMP_HOST_PORT=15674
+
+### CADDY #################################################
+CADDY_HOST_HTTP_PORT=80
+CADDY_HOST_HTTPS_PORT=443
+CADDY_HOST_LOG_PATH=./__app-code/data/log/caddy
+CADDY_CONFIG_PATH=./caddy/caddy
