--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -171,3 +171,18 @@ services:
     networks:
       - frontend
       - backend
+  caddy:
+    container_name: caddy
+    restart: unless-stopped
+    build: ./caddy
+    volumes:
+      - ${APP_CODE_PATH_HOST}:/var/www:cached
+      - ${CADDY_CONFIG_PATH}:/etc/caddy
+      - ${CADDY_HOST_LOG_PATH}:/var/log/caddy
+      - ./caddy/data:/root/.caddy
+    ports:
+      - "${CADDY_HOST_HTTP_PORT}:80"
+      - "${CADDY_HOST_HTTPS_PORT}:443"
+    networks:
+      - frontend
+      - backend
