--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 WORKSPACE_TIMEZONE=UTC
 APP_CODE_PATH_HOST=./__app-code
+DOCKER_SOCK_PATH=/var/run/docker.sock
 
 ### REDIS #################################################
 REDIS_PORT=6379
@@ -51,3 +52,8 @@ CADDY_HOST_HTTP_PORT=80
 CADDY_HOST_HTTPS_PORT=443
 CADDY_HOST_LOG_PATH=./__app-code/data/log/caddy
 CADDY_CONFIG_PATH=./caddy/caddy
+
+### JENKINS ###############################################
+JENKINS_HOST_HTTP_PORT=8090
+JENKINS_HOST_SLAVE_AGENT_PORT=50000
+JENKINS_HOME=./jenkins/jenkins_home
