--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - backend
   redis-webui:
     container_name: redis-webui
-    restart: always
+    restart: unless-stopped
     build:
       context: ./redis-webui
     environment:
@@ -88,19 +88,6 @@ services:
     volumes:
       - mongodata:/data/db
       - ./mongo/config:/data/configdb
-    networks:
-      - backend
-  jenkins:
-    container_name: jenkins
-    image: jenkins/jenkins:latest
-    privileged: true
-    ports:
-      - 8080:8080
-      - 50000:50000
-    volumes:
-      - ./jenkins/certs:/certs/client
-      - ./jenkins/jenkins_home:/var/jenkins_home
-      - ./jenkins/docker.sock:/var/run/docker.sock
     networks:
       - backend
   minio:
@@ -183,6 +170,22 @@ services:
     ports:
       - "${CADDY_HOST_HTTP_PORT}:80"
       - "${CADDY_HOST_HTTPS_PORT}:443"
+    networks:
+      - frontend
+      - backend
+  jenkins:
+    container_name: jenkins
+    restart: unless-stopped
+    build: ./jenkins
+    environment:
+      JAVA_OPTS: "-Djava.awt.headless=true"
+    ports:
+      - "${JENKINS_HOST_SLAVE_AGENT_PORT}:50000"
+      - "${JENKINS_HOST_HTTP_PORT}:8080"
+    privileged: true
+    volumes:
+      - ${JENKINS_HOME}:/var/jenkins_home
+      - ${DOCKER_SOCK_PATH}:/var/run/docker.sock
     networks:
       - frontend
       - backend
