update: postgres default user

--- a/.env.example
+++ b/.env.example
@@ -22,9 +22,9 @@ MONGO_PASSWORD=root
 ### POSTGRES ##############################################
 POSTGRES_VERSION=alpine
 POSTGRES_CLIENT_VERSION=15
-POSTGRES_DB=default
-POSTGRES_USER=root
-POSTGRES_PASSWORD=root
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=roots
 POSTGRES_PORT=5432
 
 ### MINIO #################################################
@@ -56,4 +56,4 @@ CADDY_CONFIG_PATH=./caddy/caddy
 ### JENKINS ###############################################
 JENKINS_HOST_HTTP_PORT=8090
 JENKINS_HOST_SLAVE_AGENT_PORT=50000
-JENKINS_HOME=./jenkins/jenkins_home
+JENKINS_HOME=./jenkins/jenkins_homes
