--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,19 +44,19 @@ services:
   postgres:
     container_name: postgres
     restart: unless-stopped
-    build:
-      context: ./postgres
-      args:
-        - POSTGRES_VERSION=${POSTGRES_VERSION}
+    image: postgres:12.2-alpine
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    expose:
+      - "8080"
+      - "5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./postgres/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     ports:
       - "${POSTGRES_PORT}:5432"
+      - "8080:8080"
     networks:
       - backend
   mongo:
