--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -148,13 +148,15 @@ services:
     restart: unless-stopped
     build: ./caddy
     volumes:
-      - ${APP_CODE_PATH_HOST}:/var/www:cached
-      - ${CADDY_CONFIG_PATH}:/etc/caddy
-      - ${CADDY_HOST_LOG_PATH}:/var/log/caddy
-      - ./caddy/data:/root/.caddy
+      - ${APP_CODE_PATH_HOST}:/srv
+      - ./caddy/data-config:/config
+      - ./caddy/data:/data
+      - ./caddy/Caddyfile:/etc/caddy/Caddyfile
     ports:
       - "${CADDY_HOST_HTTP_PORT}:80"
       - "${CADDY_HOST_HTTPS_PORT}:443"
+      - "2019:2019"
+    command: ["caddy", "run", "--config", "/etc/caddy/Caddyfile", "--watch"]
     networks:
       - frontend
       - backend
