--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -7,7 +7,8 @@ localhost {
 }
 
 static-site.local {
-    respond "hello world!"
+    root * /srv/static-site
+    file_server
 }
 
 webapp-3001.local {
