--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,9 +44,13 @@ services:
   postgres:
     container_name: postgres
     restart: unless-stopped
-    image: postgres:12.2-alpine
+    build:
+      context: ./postgres
+      args:
+        - POSTGRES_VERSION=${POSTGRES_VERSION}
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     expose:
       - "8080"
