--- a/.env.example
+++ b/.env.example
@@ -20,11 +20,10 @@ MONGO_USERNAME=root
 MONGO_PASSWORD=root
 
 ### POSTGRES ##############################################
-POSTGRES_VERSION=alpine
-POSTGRES_CLIENT_VERSION=15
-POSTGRES_DB=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=roots
+POSTGRES_VERSION=15-alpine
+POSTGRES_DB=default
+POSTGRES_USER=root
+POSTGRES_PASSWORD=root
 POSTGRES_PORT=5432
 
 ### MINIO #################################################
