--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,11 +118,13 @@ services:
     environment:
       - KAFKA_ENABLE_KRAFT=yes
       - KAFKA_CFG_NODE_ID=1
+      - KAFKA_CFG_CLUSTER_ID=kafka-local-0
+      - KAFKA_KRAFT_CLUSTER_ID=kafka-local-0
       - KAFKA_CFG_PROCESS_ROLES=broker,controller
       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
-      - KAFKA_CFG_LISTENERS=SASL_PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=SASL_PLAINTEXT://localhost:9092
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=SASL_PLAINTEXT:SASL_PLAINTEXT,CONTROLLER:PLAINTEXT
+      - KAFKA_CFG_LISTENERS=SASL_PLAINTEXT://:9092,CONTROLLER://:9093,INTERNAL://:9094
+      - KAFKA_CFG_ADVERTISED_LISTENERS=SASL_PLAINTEXT://localhost:9092,INTERNAL://:9094
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=SASL_PLAINTEXT:SASL_PLAINTEXT,CONTROLLER:PLAINTEXT,INTERNAL:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=SASL_PLAINTEXT
       - KAFKA_CFG_SASL_ENABLED_MECHANISMS=PLAIN
@@ -135,6 +137,21 @@ services:
     ports:
       - '9092:9092'
       - '9093:9093'
+    # volumes:
+      # - ./kafka/data:/bitnami/kafka
+    networks:
+      - backend
+  kafka-ui:
+    container_name: kafka-ui
+    image: provectuslabs/kafka-ui:latest
+    ports:
+      - 8082:8080
+    environment:
+      # DYNAMIC_CONFIG_ENABLED: 'true'
+      KAFKA_CLUSTERS_0_NAME: "kafka-local-0"
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9094
+    # volumes:
+    #   - ./kafka/kui/config.yml:/etc/kafkaui/dynamic_config.yaml
     networks:
       - backend
   mailhog:
