add: franken php image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.5'
-
 networks:
   frontend:
     driver: bridge
@@ -200,12 +198,20 @@ services:
   php:
     container_name: frankenphp
     restart: unless-stopped
-    build: ./frankenphp
+    build:
+      context: ./frankenphp
+      target: frankenphp_dev
+    environment:
+      - APP_ENV=local
+      - XDEBUG_MODE=off
+      - FRANKENPHP_WORKER_CONFIG=watch
+      - TZ=UTC
     volumes:
-      - ../php:/php-app
+      - ~/code/php-apps:/php-apps
       - ./frankenphp/data:/data
       - ./frankenphp/config:/config
-      - ./frankenphp/Caddyfile:/etc/caddy/Caddyfile
+      - ./frankenphp/Caddyfile:/etc/frankenphp/Caddyfile
+      - ~/.composer/cache:/root/.composer/cache
     ports:
       - "80:80" # HTTP
       - "443:443" # HTTPS
